--- a/data/vaipe.yaml
+++ b/data/vaipe.yaml
@@ -3,7 +3,8 @@
 
 # train and val data as 1) directory: path/images/",  "2) file: path/images.txt",  "or 3) list: [path1/images/",  "path2/images/]
 train: ./vaipe/train.txt  # 118287 images
-val: ./vaipe/val.txt  # 5000 images
+val: ./vaipe/val.txt  # 1000 images
+test: ./vaipe/test.txt  # 1500 images
 # test: ./coco/test-dev2017.txt  # 20288 of 40670 images",  "submit to https://competitions.codalab.org/competitions/20794
 
 # number of classes
