--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 *.pt
 *.zip
 __pycache__/
-vaipe/images/
-vaipe/labels/
-vaipe/publicTest/
-vaipeFix/images/
-vaipeFix/labels/
-vaipeFix/publicTest/
+vaipe*/image*/
+vaipe*/label*/
+vaipe*/publicTest/
 __pycache__/
 runs/
 wandb/
