--- a/Dockerfile.save
+++ b/Dockerfile.save
@@ -16,8 +16,6 @@ RUN apt-get install -y software-properties-common && \
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
-RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 10
-
 COPY . .
 
-ENTRYPOINT ["python3"]
+ENTRYPOINT ["python3", "inference/infer.py"]
