--- a/data/vaipe_exif.yaml
+++ b/data/vaipe_exif.yaml
@@ -4,7 +4,7 @@
 # train and val data as 1) directory: path/images/",  "2) file: path/images.txt",  "or 3) list: [path1/images/",  "path2/images/]
 train: ./vaipe_exif/train.txt  # 8367 images
 # val: ./vaipe_exif/val.txt  # 1000 images
-val: ./vaipe_exif/test.txt  # 1000 images
+val: ./vaipe_exif/val.txt  # 1000 images
 test: ./vaipe_exif/test.txt  # 1500 images
 
 # number of classes
