--- a/data/vaipe_fix_gen.yaml
+++ b/data/vaipe_fix_gen.yaml
@@ -4,7 +4,7 @@
 # train and val data as 1) directory: path/images/",  "2) file: path/images.txt",  "or 3) list: [path1/images/",  "path2/images/]
 train: ./vaipeFixGen/train.txt  # 118287 images
 # val: ./vaipeFixGen/val.txt  # 1000 images
-val: ./vaipeFixGen/test.txt  # 1000 images
+val: ./vaipeFixGen/val.txt  # 1000 images
 test: ./vaipeFixGen/test.txt  # 1500 images
 # test: ./coco/test-dev2017.txt  # 20288 of 40670 images",  "submit to https://competitions.codalab.org/competitions/20794
 
