--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 *.zip
 __pycache__/
 vaipe*/
-__pycache__/
 runs
 wandb/
 coco/
@@ -12,3 +11,4 @@ ensemble/
 vaipe_exif/
 dataset/
 .Dockerfile.swp
+label/
