--- a/inference/config.json
+++ b/inference/config.json
@@ -1,5 +1,5 @@
 {
-    "data": "data/vaipe_exif.yaml",
+    "data": "data/vaipe_exif_gen.yaml",
     "batch_size": 32,
     "img_size": 960,
     "device": "0",
@@ -16,5 +16,5 @@
     "adv_name": "adv",
     "base_weights": "./runs/train/yolov7_45_deg_40_gen/weights/best.pt ./runs/train/yolov74/weights/best.pt ./runs/train/yolov73/weights/best.pt ./runs/train/yolov7-tiny_115_deg_40_gen/weights/best.pt",
     "adv_weights": "./runs/train/yolov7_50_deg_40_gen_singlecls_400epochs/weights/best.pt",
-    "overwrite_preprocess": true
+    "overwrite_preprocess": false
 }
