--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,11 @@
 *.zip
 __pycache__/
 vaipe*/
-runs
+runs/*
+!runs/ocr
+runs/ocr/*
+!runs/ocr/drug_name_dict.csv
+!runs/ocr/drug_name_dict.json
 wandb/
 coco/
 *.cache
@@ -13,5 +17,3 @@ dataset/
 .Dockerfile.swp
 label/
 gen/fg
-!runs/ocr/drug_name_dict.csv
-!runs/ocr/drug_name_dict.json
