--- a/data/vaipe_fix_gen_new_gen.yaml
+++ b/data/vaipe_fix_gen_new_gen.yaml
@@ -3,7 +3,7 @@
 
 # train and val data as 1) directory: path/images/",  "2) file: path/images.txt",  "or 3) list: [path1/images/",  "path2/images/]
 # train: ./vaipeFixGen/train.txt  # 11287 images
-train: ./vaipeFixGen/train.txt  # 11287 + 1500 images
+train: ./vaipeFixGen/train_new_gen.txt  # 11287 + 1500 images
 # val: ./vaipeFixGen/val.txt  # 1000 images
 val: ./vaipeFixGen/val.txt  # 1000 images
 test: ./vaipeFixGen/test.txt  # 1500 images
