--- a/inference/data_config.json
+++ b/inference/data_config.json
@@ -1,7 +1,8 @@
 {
     "prescription_train_label_dir": "/home/pill/competition/dataset/public_train/prescription/label",
-    "prescription_infer_image_dir": "/home/pill/competition/yolov7/vaipe_exif/public_test_new/prescription/image",
-    "pill_infer_image_dir": "/home/pill/competition/yolov7/vaipe_exif/public_test_new/pill/image",
+    "prescription_infer_image_dir": "/home/pill/competition/RELEASE_private_test/prescription/image",
+    "pill_infer_image_dir": "/home/pill/competition/RELEASE_private_test/pill/image",
     "pill_train_label_dir": "/home/pill/competition/dataset/public_train/pill/labels",
-    "pill_train_image_dir": "/home/pill/competition/dataset/public_train/pill/images"
+    "pill_train_image_dir": "/home/pill/competition/dataset/public_train/pill/images",
+    "pill_pres_map":  "/home/pill/competition/RELEASE_private_test/pill_pres_map.jsonZ"
 }
